@startuml

title __JWT's Class Diagram__\n

  namespace com.deta.kopmart_backend {
    namespace security {
      namespace JWT {
        class com.deta.kopmart_backend.security.JWT.JwtEntryPoint {
            {static} - logger : Logger
            + commence()
        }
      }
    }
  }
  

  namespace com.deta.kopmart_backend {
    namespace security {
      namespace JWT {
        class com.deta.kopmart_backend.security.JWT.JwtFilter {
            # doFilterInternal()
            - getToken()
        }
      }
    }
  }
  

  namespace com.deta.kopmart_backend {
    namespace security {
      namespace JWT {
        class com.deta.kopmart_backend.security.JWT.JwtProvider {
            - jwtExpiration : int
            - jwtSecret : String
            {static} - logger : Logger
            + generate()
            + getUserAccount()
            + validate()
        }
      }
    }
  }
  

  com.deta.kopmart_backend.security.JWT.JwtEntryPoint .up.|> org.springframework.security.web.AuthenticationEntryPoint
  com.deta.kopmart_backend.security.JWT.JwtFilter -up-|> org.springframework.web.filter.OncePerRequestFilter
  com.deta.kopmart_backend.security.JWT.JwtFilter o-- com.deta.kopmart_backend.security.JWT.JwtProvider : jwtProvider
  com.deta.kopmart_backend.security.JWT.JwtFilter o-- com.deta.kopmart_backend.service.UserService : userService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
